syntax = "proto3";
package ShareRing.shareledger.id;

import "gogoproto/gogo.proto";
import "id/tx.proto";

option go_package = "github.com/ShareRing/Shareledger/x/id/types";

// GenesisState defines the id module's genesis state.
message GenesisState {
    repeated ID IDs = 1 [(gogoproto.nullable) = true];
}
