syntax = "proto3";
package shareledger.id;

option go_package = "github.com/sharering/shareledger/x/id/types";


message BaseID {
  
  string issuerAddress = 1; 
  string backupAddress = 2; 
  string ownerAddress = 3; 
  string extraData = 4; 
}